# libhugetlbfs

./: .gitignore  HOWTO  Makefile  Makefile.in  NEWS  README  SubmittingCode  VERSION  alloc.c  configure.ac  cpumhz  cpupcstat  debug.c  elf32ppclinux.c  elf64ppc.c  elflink.c  huge_page_setup_helper.py  hugeadm.c  hugectl.c  hugeedit.c  hugetlbd.c  hugetlbd.h  hugetlbfs.h  hugeutils.c  init.c  init_privutils.c  kernel-features.c  ld.hugetlbfs  libhugetlbfs_debug.h  libhugetlbfs_internal.h  libhugetlbfs_privutils.h  libhugetlbfs_testprobes.h  localversion  morecore.c  oprofile_map_events.pl  oprofile_start.sh  pagesize.c  run_tests.sh  shm.c  start_daemon.sh  (+11 more)
TLBC/: DataCollect.pm  OpCollect.pm  PerfCollect.pm
contrib/: tlbmiss_cost.sh
ldscripts/: elf32ppclinux.xB  elf32ppclinux.xBDT  elf32ppclinux.xH  elf32ppclinux.xHB  elf64ppc.xB  elf64ppc.xBDT  elf64ppc.xH  elf64ppc.xHB  elf_i386.xB  elf_i386.xBDT  elf_i386.xH  elf_i386.xHB  elf_x86_64.xB  elf_x86_64.xBDT
man/: cpupcstat.8  get_huge_pages.3  get_hugepage_region.3  hugeadm.8  hugectl.8  libhugetlbfs.7  tlbmiss_cost.sh.8
tests/: Makefile  alloc-instantiate-race.c  brk_near_huge.c  chunk-overcommit.c  counters.c  direct.c  dummy.c  empty_mounts.c  fadvise_reserve.c  fadvise_reserve.sh  fallocate_align.c  fallocate_align.sh  fallocate_basic.c  fallocate_basic.sh  fallocate_stress.c  fallocate_stress.sh  find_path.c  fork-cow.c  get_huge_pages.c  get_hugepage_region.c  gethugepagesize.c  gethugepagesizes.c  heap-overflow.c  heapshrink.c  huge_at_4GB_normal_below.c  huge_below_4GB_normal_above.c  hugetests.h  malloc.c  (+51 more)
(+3 files in other folders)
